# kinderhub

./: .gitignore  README.md
backend/: .env  .gitignore  pyproject.toml
backend/app/: main.py
backend/src/: create_tables.sql
backend/src/app/: config.py  main.py
backend/src/app/database/: connection.py  models.py
backend/src/app/routers/: create_user.py  list_airports.py
backend/src/app/schemas/: list_airports.py
backend/src/app/utils/: sql_utils.py
backend/tests/: conftest.py
backend/tests/unit/test_utils/test_sql_utils/: test_add_new_user.py  test_check_user_exists.py
frontend/api-playground/: index.html  package-lock.json  package.json
frontend/api-playground/src/: App.tsx  main.tsx
frontend/api-playground/src/components/: ApiPlayground.tsx  EndpointSelector.tsx  JsonViewer.tsx  Layout.tsx
frontend/api-playground/src/lib/: apiClient.ts
